[project]
name = "insurance-charges-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.2"
dependencies = [
    "pytest>=8.3.3",
    "scikit-learn>=1.4.1.post1",
    "zenml[server]==0.84.0",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "ruff>=0.12.4",
]
